@@ -35,10 +35,11 @@ EXTRA_DIST = coblocal.h system.def
 pkgincludedir = $(includedir)/libcob
 pkginclude_HEADERS = common.h cobgetopt.h exception.def
 
-# Add rules for code-coverage testing, as provided by AX_CODE_COVERAGE
-@CODE_COVERAGE_RULES@
-CODE_COVERAGE_BRANCH_COVERAGE=1
-CODE_COVERAGE_LCOV_OPTIONS =  --no-external
+# FIXME: needs GNU make, even if not enabled
+# Add rules for code-coverage testing, as defined by AX_CODE_COVERAGE
+#CODE_COVERAGE_BRANCH_COVERAGE=1
+#@CODE_COVERAGE_RULES@
+#CODE_COVERAGE_LCOV_OPTIONS =  --no-external
 
 #libcob.3: $(top_srcdir)/bin/cobcrun.c $(top_srcdir)/configure.ac | $(COBCRUN)
 #	$(HELP2MAN) --output=$@ --info-page=$(PACKAGE) $(COBCRUN) -specialflag
